syntax = "proto3";

package database;
import "google/protobuf/timestamp.proto";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.esquel.pmm.protobuf.db";

service TableMutation {
  rpc InsertRows (InsertRowsRequest) returns (InsertRowsResponse);
}

message InsertRowsRequest {
  string       creatorID = 1;
  string       name      = 2;
  repeated Row rows      = 3;

  message Row {
    repeated Cell cells = 1;
  }

  message Cell {
    string columnName = 1;
    string value      = 2;
  }
}

message InsertRowsResponse {
  string       name = 2;
  string       id   = 3;
  repeated Row rows = 4;

  message Row {
    repeated Cell             cells     = 1;
    string                    id        = 2;
    google.protobuf.Timestamp createdAt = 3;
  }

  message Cell {
    string columnName = 1;
    string value      = 2;
    string id         = 3;
    string type       = 4;
  }
}
